# aspnetcore/src/mynhs/Models/BloodPressure.cs
@@ -1,0 +1,137 @@
+/*
+ * My NHS Graph
+ *
+ * WIP Strawman API ideas for a Unified API myNHS API Graph endpoint, bringing together both new \"User Generated Data\" and existing sources into one endpoint and one Authorisation model, supporting delegated user access and proxy access. Modeling that the records belong to the \"tennant\" with owners having proxy access (ie full) and users being shared specifics records. Oauth scopes, with modifiers of .shared and .all. Look at Microsoft Graph for where that comes from. To support idempotency, all POST apis are just requests to start something, the put starts this. Alows for evential consistency. Long running GETs are removed, by POSTing requests for data, with a GET endpoint returned.
+ *
+ * OpenAPI spec version: 0.1
+ * 
+ * Generated by: https://github.com/swagger-api/swagger-codegen.git
+ */
+using System;
+using System.Linq;
+using System.IO;
+using System.Text;
+using System.Collections;
+using System.Collections.Generic;
+using System.Collections.ObjectModel;
+using System.ComponentModel.DataAnnotations;
+using System.Runtime.Serialization;
+using Newtonsoft.Json;
+
+namespace mynhs.Models
+{ 
+    /// <summary>
+    /// Diastolic/Systolic
+    /// </summary>
+    [DataContract]
+    public partial class BloodPressure : IEquatable<BloodPressure>
+    { 
+        /// <summary>
+        /// The bigger number (the first number)
+        /// </summary>
+        /// <value>The bigger number (the first number)</value>
+
+        [DataMember(Name="Systolic")]
+        public long? Systolic { get; set; }
+
+        /// <summary>
+        /// The smaller number (the second number)
+        /// </summary>
+        /// <value>The smaller number (the second number)</value>
+
+        [DataMember(Name="Diastolic")]
+        public long? Diastolic { get; set; }
+
+        /// <summary>
+        /// Returns the string presentation of the object
+        /// </summary>
+        /// <returns>String presentation of the object</returns>
+        public override string ToString()
+        {
+            var sb = new StringBuilder();
+            sb.Append("class BloodPressure {\n");
+            sb.Append("  Systolic: ").Append(Systolic).Append("\n");
+            sb.Append("  Diastolic: ").Append(Diastolic).Append("\n");
+            sb.Append("}\n");
+            return sb.ToString();
+        }
+
+        /// <summary>
+        /// Returns the JSON string presentation of the object
+        /// </summary>
+        /// <returns>JSON string presentation of the object</returns>
+        public string ToJson()
+        {
+            return JsonConvert.SerializeObject(this, Formatting.Indented);
+        }
+
+        /// <summary>
+        /// Returns true if objects are equal
+        /// </summary>
+        /// <param name="obj">Object to be compared</param>
+        /// <returns>Boolean</returns>
+        public override bool Equals(object obj)
+        {
+            if (ReferenceEquals(null, obj)) return false;
+            if (ReferenceEquals(this, obj)) return true;
+            return obj.GetType() == GetType() && Equals((BloodPressure)obj);
+        }
+
+        /// <summary>
+        /// Returns true if BloodPressure instances are equal
+        /// </summary>
+        /// <param name="other">Instance of BloodPressure to be compared</param>
+        /// <returns>Boolean</returns>
+        public bool Equals(BloodPressure other)
+        {
+            if (ReferenceEquals(null, other)) return false;
+            if (ReferenceEquals(this, other)) return true;
+
+            return 
+                (
+                    Systolic == other.Systolic ||
+                    Systolic != null &&
+                    Systolic.Equals(other.Systolic)
+                ) && 
+                (
+                    Diastolic == other.Diastolic ||
+                    Diastolic != null &&
+                    Diastolic.Equals(other.Diastolic)
+                );
+        }
+
+        /// <summary>
+        /// Gets the hash code
+        /// </summary>
+        /// <returns>Hash code</returns>
+        public override int GetHashCode()
+        {
+            unchecked // Overflow is fine, just wrap
+            {
+                var hashCode = 41;
+                // Suitable nullity checks etc, of course :)
+                    if (Systolic != null)
+                    hashCode = hashCode * 59 + Systolic.GetHashCode();
+                    if (Diastolic != null)
+                    hashCode = hashCode * 59 + Diastolic.GetHashCode();
+                return hashCode;
+            }
+        }
+
+        #region Operators
+        #pragma warning disable 1591
+
+        public static bool operator ==(BloodPressure left, BloodPressure right)
+        {
+            return Equals(left, right);
+        }
+
+        public static bool operator !=(BloodPressure left, BloodPressure right)
+        {
+            return !Equals(left, right);
+        }
+
+        #pragma warning restore 1591
+        #endregion Operators
+    }
+}
